--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,11 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uplinked</title>
     <!--sampai bagian ini auto dibikin-->
+    <!--ini buat link ke CSS-->
     <link rel="stylesheet" type="text/css" href=../static/main.css />
+    <!--ini buat link ke font style-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="navbar">
       <span class="background"></span>
+      <a class="up" href="iniDiIsiLinkHomePage">UP</a>
+      <div class="right">
+        <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
+        <a class="startups" href="iniDiIsiLinkStartUps">Startups</a>
+        <a class="login" href="iniDiIsiLinkLogin">Login</a>
+      </div>
     </div>
   </body>
 </html>
