Added Search bar at navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,10 @@
     <div class="navbar">
       <span class="background"></span>
       <a class="up" href="iniDiIsiLinkHomePage">UP</a>
+      <div class="searchbar">
+        <span class="background"></span>
+        <input type="text" placeholder="Search..." />
+      </div>
       <div class="right">
         <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
         <a class="startups" href="iniDiIsiLinkStartUps">Startups</a>
