--- a/static/main.css
+++ b/static/main.css
@@ -32,6 +32,39 @@
   line-height: 59px;
 }
 
+.navbar .searchbar {
+  position: fixed;
+}
+
+.navbar .searchbar span.background {
+  top: 1.5%;
+  left: 37%;
+
+  width: 390px;
+  height: 46px;
+
+  background: #ffffff;
+  border-radius: 25px;
+}
+
+.navbar .searchbar input {
+  position: fixed;
+  top: 2.5%;
+  left: 38%;
+
+  width: 345px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
 .navbar .right a {
   top: 3%;
 
