--- a/templates/login_miles.html
+++ b/templates/login_miles.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'navbar.html' %}
+{% block layout %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,3 +51,4 @@
     
 </body>
 </html>
+{% endblock layout %}
