--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,8 +26,9 @@
       <div class="right">
         <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
         <a class="startups" href="iniDiIsiLinkStartUps">Startups</a>
-        <a class="login" href="iniDiIsiLinkLogin">Login</a>
+        <a class="login"  href="{{url_for('login')}}"">Login</a>
       </div>
     </div>
+    {% block layout %}{% endblock layout %}
   </body>
 </html>
