Editted login page placement

--- a/templates/login_miles.html
+++ b/templates/login_miles.html
@@ -6,36 +6,7 @@
     <title>Login to Uplinked</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <style>
-        *{
-            font-family: 'Ubuntu', sans-serif;
-        }
-        .mycontainer{
-            background-color: black;
-            color: rgb(255, 255, 255);
-            width: 300px;
-            height: 200px;
-            text-align: center;
-            padding-top: 40px;
-            border-radius: 10px;
-
-            background-color:rgb(134, 40, 126);
-            background-size:cover;
-            background-position: center;
-        }
-        .wrap{
-            width: 300px;
-            margin: 10px auto;
-        }
-        .mybtn{
-            width: 300px;
-            height: 50px;
-            border-radius: 8px;
-            background-color: rgb(134, 40, 126);
-            color: white;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href=../static/login_miles.css />
 </head>
 
 <body>
