--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
   <body>
     <div class="navbar">
       <span class="background"></span>
-      <a class="up" href="iniDiIsiLinkHomePage">UP</a>
+      <a class="up" href="home">UP</a>
       <div class="searchbar">
         <span class="background"></span>
         <input type="text" placeholder="Search..." />
@@ -26,7 +26,7 @@
       <div class="right">
         <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
         <a class="startups" href="iniDiIsiLinkStartUps">Startups</a>
-        <a class="login"  href="{{url_for('login')}}"">Login</a>
+        <a class="login"  href="{{url_for('login')}}">Login</a>
       </div>
     </div>
     {% block layout %}{% endblock layout %}
