--- a/templates/login_miles.html
+++ b/templates/login_miles.html
@@ -1,51 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'navbar.html'%}
+{%block layout%}
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to Uplinked</title>
-    <style>
-        .mycontainer{
-            background-color: black;
-            color: rgb(255, 255, 255);
-            width: 300px;
-            height: 200px;
-            text-align: center;
-            padding-top: 40px;
-            border-radius: 10px;
-
-            background-color:rgb(134, 40, 126);
-            background-size:cover;
-            background-position: center;
-        }
-        .wrap{
-            width: 300px;
-            margin-top: 125px;
-            margin-left: auto; 
-            margin-right: auto; 
-        }
-        .mybtn{
-            width: 300px;
-            height: 50px;
-            border-radius: 8px;
-            background-color: rgb(134, 40, 126);
-            color: white;
-        }
-        table{
-            border-collapse: separate;
-            border-spacing: 0 15px;
-        }        
-        .inputBox{
-            width: 210px;
-            margin-left: 10px;
-            border-radius: 4px;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/main.css">
 
 </head>
-
-<body>
-    
     <div class="wrap">
         <div class="mycontainer">
             <h1> Login Page </h1>
@@ -63,6 +22,4 @@
 
         <button class="mybtn">Login</button>
     </div>
-    
-</body>
-</html>
+{%endblock layout%}
