Added route to regis_investor

--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'navbar.html'%}
+{%block layout%}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,5 +72,4 @@
         <button class="nextButton" >Next</button>
     </div>
 </body>
-
-</html>
+{%endblock layout%}
