--- a/templates/pref_investor.html
+++ b/templates/pref_investor.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'navbar.html'%}
+{%block layout%}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -95,5 +95,4 @@
         <button class="startBtn">Start</button>
     </div>
 </body>
-
-</html>
+{%endblock layout%}
