--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -32,6 +32,7 @@
             left: 400px;
 
             color: white;
+            text-decoration: none;
             background-color:rgb(134, 40, 126);
             border-radius: 8px;
         }
@@ -69,7 +70,7 @@
             </tr>
 
         </table>
-        <button class="nextButton" >Next</button>
+        <a class="nextButton" href="{{url_for('pref')}}">Next</a>
     </div>
 </body>
 {%endblock layout%}
