Pindahin semua css ke main.css, adaptasi nama class, balikin bentuk button

--- a/templates/login_miles.html
+++ b/templates/login_miles.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="../static/main.css">
 
 </head>
-    <div class="wrap">
+    <div class="wrapLogin">
         <div class="mycontainer">
             <h1> Login Page </h1>
             <p> Type your Email and Password </p>
         </div>
         
-        <table>
+        <table class="loginTable">
             <tr>
-                <td> Email       </td> <td> <input type="text" class="inputBox" /> </td>
+                <td> Email       </td> <td> <input type="text" class="inputBoxLogin" /> </td>
             </tr>
             <tr>
-                <td> Password    </td> <td> <input type="text" class="inputBox" /> </td>
+                <td> Password    </td> <td> <input type="text" class="inputBoxLogin" /> </td>
             </tr>
         </table>
 
