--- a/static/main.css
+++ b/static/main.css
@@ -105,7 +105,7 @@
   background-size:cover;
   background-position: center;
 }
-.wrap{
+.wrapLogin{
   width: 300px;
   margin-top: 125px;
   margin-left: auto; 
@@ -118,12 +118,113 @@
   background-color: rgb(134, 40, 126);
   color: white;
 }
-table{
+.loginTable{
   border-collapse: separate;
   border-spacing: 0 15px;
 }        
-.inputBox{
+.inputBoxLogin{
   width: 210px;
   margin-left: 10px;
   border-radius: 4px;
+}
+
+/*----------------------------------------register Investor-------------------------------------------------------*/
+a{
+  color: white;
+  text-decoration: none;
+}
+.regInvestable{
+  border-collapse: separate;
+  border-spacing: 0 20px;
+}
+.info{
+  text-align: right;
+  font-weight: bold;
+}
+.inputBox-regInv{
+  background-color:rgb(177, 92, 170);
+  color: white;
+
+  width: 250px;
+  height: 30px;
+  margin-left: 20px;
+  border-radius:8px;
+}
+.nextButton{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 400px;
+
+  color: white;
+  text-decoration: none;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+.regInv-wrap{
+  width: 500px;
+  margin-top: 125px;
+  margin-left: auto; 
+  margin-right: auto; 
+}
+
+/*----------------------------------------preference Investor-------------------------------------------------------*/
+.prefInv-table{
+  border-collapse: separate;
+  border-spacing: 0 20px;
+}
+.info{
+  text-align: right;
+  font-weight: bold;
+}
+.inputBox-prefInv{
+  background-color:rgb(177, 92, 170);
+  color: white;
+
+  width: 250px;
+  height: 30px;
+  margin-left: 20px;
+  border-radius:8px;
+}
+.nextButton{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 400px;
+
+  color: white;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+.prefInv-wrap{
+  width: 520px;
+  margin-top: 125px;
+  margin-left: auto; 
+  margin-right: auto; 
+}
+.backBtn{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 150px; 
+
+  color: white;
+  text-decoration: none;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+
+.startBtn{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 300px;
+
+  color: white;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
 }
