--- a/templates/pref_investor.html
+++ b/templates/pref_investor.html
@@ -1,100 +1,39 @@
 {%extends 'navbar.html'%}
 {%block layout%}
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor - Preference</title>
+    <link rel="stylesheet" href="../static/main.css">
 
-    <style>
-        table{
-            border-collapse: separate;
-            border-spacing: 0 20px;
-        }
-        .info{
-            text-align: right;
-            font-weight: bold;
-        }
-        .inputBox{
-            background-color:rgb(177, 92, 170);
-            color: white;
-
-            width: 250px;
-            height: 30px;
-            margin-left: 20px;
-            border-radius:8px;
-        }
-        .nextButton{
-            width: 60px;
-            height: 30px;    
-            position: relative;
-            top: 30px;
-            left: 400px;
-
-            color: white;
-            background-color:rgb(134, 40, 126);
-            border-radius: 8px;
-        }
-        .wrap{
-            width: 520px;
-            margin-top: 125px;
-            margin-left: auto; 
-            margin-right: auto; 
-        }
-        .backBtn{
-            width: 60px;
-            height: 30px;    
-            position: relative;
-            top: 30px;
-            left: 150px; 
-
-            color: white;
-            text-decoration: none;
-            background-color:rgb(134, 40, 126);
-            border-radius: 8px;
-        }
-
-        .startBtn{
-            width: 60px;
-            height: 30px;    
-            position: relative;
-            top: 30px;
-            left: 300px;
-
-            color: white;
-            background-color:rgb(134, 40, 126);
-            border-radius: 8px;
-        }
-
-    </style>
 </head>
 
-<body>
-    <div class="wrap">
+    <div class="prefInv-wrap">
         <h1>Tell us what you want</h1>
-        <table>
+        <table class="prefInv-table">
             <tr>
-                <td class="info"> Category Preference </td>                <td> <input type="email" class="inputBox"> </td>
+                <td class="info"> Category Preference </td>                <td> <input type="email" class="inputBox-prefInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Investing Budget </td>             <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Investing Budget </td>             <td> <input type="text" class="inputBox-prefInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Location of Startup </td>              <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Location of Startup </td>              <td> <input type="text" class="inputBox-prefInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Number of People in the Team </td> <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Number of People in the Team </td> <td> <input type="text" class="inputBox-prefInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Development Stage </td>         <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Development Stage </td>         <td> <input type="text" class="inputBox-prefInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Return Type </td>               <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Return Type </td>               <td> <input type="text" class="inputBox-prefInv"> </td>
             </tr>
 
         </table>
-        <a class="backBtn" href="{{url_for('regis_investor')}}">Back</a> 
-        <a class="startBtn">Start</a>
+        <button class="backBtn">
+            <a href="{{url_for('regis_investor')}}">Back</a> 
+        </button>
+        <button class="startBtn">
+            <a>Start</a>
+        </button>
     </div>
-</body>
 {%endblock layout%}
