--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -1,76 +1,36 @@
 {%extends 'navbar.html'%}
 {%block layout%}
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor - Data</title>
+    <link rel="stylesheet" href="../static/main.css">
 
-    <style>
-        table{
-            border-collapse: separate;
-            border-spacing: 0 20px;
-        }
-        .info{
-            text-align: right;
-            font-weight: bold;
-        }
-        .inputBox{
-            background-color:rgb(177, 92, 170);
-            color: white;
-
-            width: 250px;
-            height: 30px;
-            margin-left: 20px;
-            border-radius:8px;
-        }
-        .nextButton{
-            width: 60px;
-            height: 30px;    
-            position: relative;
-            top: 30px;
-            left: 400px;
-
-            color: white;
-            text-decoration: none;
-            background-color:rgb(134, 40, 126);
-            border-radius: 8px;
-        }
-        .wrap{
-            width: 500px;
-            margin-top: 125px;
-            margin-left: auto; 
-            margin-right: auto; 
-        }
-
-    </style>
 </head>
 
-<body>
-    <div class="wrap">
+    <div class="regInv-wrap">
         <h1>Tell us who you are</h1>
-        <table>
+        <table class="regInvestable"> 
             <tr>
-                <td class="info"> Email </td>                <td> <input type="email" class="inputBox"> </td>
+                <td class="info"> Email </td>                <td> <input type="email" class="inputBox-regInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Forename </td>             <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Forename </td>             <td> <input type="text" class="inputBox-regInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Surname </td>              <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Surname </td>              <td> <input type="text" class="inputBox-regInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Company/Organization </td> <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Company/Organization </td> <td> <input type="text" class="inputBox-regInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regInv"> </td>
             </tr>
             <tr>
-                <td class="info"> Gender </td>               <td> <input type="text" class="inputBox"> </td>
+                <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regInv"> </td>
             </tr>
 
         </table>
-        <a class="nextButton" href="{{url_for('pref')}}">Next</a>
+        <button class="nextButton">
+            <a href="{{url_for('pref')}}">Next</a>
+        </button> 
     </div>
-</body>
 {%endblock layout%}
