Added text and browsing box in home

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,8 @@
     <div class="homeBG">
         <img  src="{{ url_for('static', filename='images/BGOrangRapat.png') }}" alt="orang rapat">
         <img class="ungu" src="{{ url_for('static', filename='images/BGUngu.png') }}" alt="warna ungu">
+        <h1>Find your business match</h1>
+        <h2>Uplinked helps investors and startups find each other</h2>
+        <a href="belom ada">Start Browsing &#x23F5</a>
     </div>
 {%endblock layout%}
