--- a/static/main.css
+++ b/static/main.css
@@ -108,6 +108,56 @@
   opacity: 0.75;
 }
 
+.homeBG h1{
+  position: absolute;
+  width: 885px;
+  height: 86px;
+  left: 89px;
+  top: 222px;
+
+  font-family: Margaret;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 86px;
+  
+  color: #FFFFFF;
+}
+
+.homeBG h2{
+  position: absolute;
+  width: 989px;
+  height: 44px;
+  left: 89px;
+  top: 319px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 44px;
+
+  color: #FFFFFF;
+}
+
+.homeBG a{
+  position: absolute;
+  width: 233px;
+  height: 66px;
+  left: 89px;
+  top: 395px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 66px;
+  color: black;
+  text-align: center;
+
+  background: #FFFFFF;
+  border-radius: 10px;
+}
 
 /*----------------------------------------login-------------------------------------------------------*/
 *{
