Added content under the main background

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,8 @@
         <h2>Uplinked helps investors and startups find each other</h2>
         <a href="belom ada">Start Browsing &#x23F5</a>
     </div>
+    <div class="underBG">
+        <h2>How does Uplinked work?</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum enim suscipit dolore nemo ipsa. Quae incidunt dolores hic voluptates in laudantium. Odio doloremque dicta accusamus porro nisi nulla placeat ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel necessitatibus amet maiores voluptate cum accusantium officia dolorem reiciendis in at repellat quaerat eos nobis, fugiat distinctio numquam dolor quia labore!</h3>
+    </div>
 {%endblock layout%}
