Added register in bottom

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,4 +11,9 @@
         <h2>How does Uplinked work?</h2>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum enim suscipit dolore nemo ipsa. Quae incidunt dolores hic voluptates in laudantium. Odio doloremque dicta accusamus porro nisi nulla placeat ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel necessitatibus amet maiores voluptate cum accusantium officia dolorem reiciendis in at repellat quaerat eos nobis, fugiat distinctio numquam dolor quia labore!</h3>
     </div>
+    <div class="bottom">
+        <a class="reginvestor" href="aaaa">Register as an <b>Investor</b></a>
+        <a class="regstartup" href="aaaa">Register as a <b>Startup Founder</b></a>
+        <div class="separator"></div>
+    </div>
 {%endblock layout%}
