--- a/static/main.css
+++ b/static/main.css
@@ -191,6 +191,52 @@
   color: #000000;
 }
 
+.bottom .reginvestor{
+  position: absolute;
+  width: 721px;
+  height: 200px;
+  left: -1px;
+  top: 2252px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 45px;
+  line-height: 200px;
+  color: #ffffff;
+  text-align: center;
+
+  background: #760166;
+}
+
+.bottom .regstartup{
+  position: absolute;
+  width: 721px;
+  height: 200px;
+  left: 720px;
+  top: 2252px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 45px;
+  line-height: 200px;
+  color: #ffffff;
+  text-align: center;
+
+  background: #760166; 
+}
+
+.separator{
+  position: absolute;
+  width: 142px;
+  height: 0px;
+  left: 640px;
+  top: 2354px;
+
+  border: 5px solid white;
+  transform: rotate(90deg);
+}
 /*----------------------------------------login-------------------------------------------------------*/
 *{
   font-family: 'Ubuntu', sans-serif;
