--- a/templates/home.html
+++ b/templates/home.html
@@ -15,5 +15,6 @@
         <a class="reginvestor" href="aaaa">Register as an <b>Investor</b></a>
         <a class="regstartup" href="aaaa">Register as a <b>Startup Founder</b></a>
         <div class="separator"></div>
+        <div class="endsquare"></div>
     </div>
 {%endblock layout%}
