--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
       </div>  
       <div class="right">
         <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
-        <a class="startups" href="iniDiIsiLinkStartUps">Startups</a>
+        <a class="startups" href="{{url_for('startups')}}">Startups</a>
         <a class="login"  href="{{url_for('login')}}">Login</a>
       </div>
     </div>
