--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -8,26 +8,27 @@
 
     <div class="regInv-wrap">
         <h1>Tell us who you are</h1>
-        <table class="regInvestable"> 
-            <tr>
-                <td class="info"> Email </td>                <td> <input type="email" class="inputBox-regInv"> </td>
-            </tr>
-            <tr>
-                <td class="info"> Forename </td>             <td> <input type="text" class="inputBox-regInv"> </td>
-            </tr>
-            <tr>
-                <td class="info"> Surname </td>              <td> <input type="text" class="inputBox-regInv"> </td>
-            </tr>
-            <tr>
-                <td class="info"> Company/Organization </td> <td> <input type="text" class="inputBox-regInv"> </td>
-            </tr>
-            <tr>
-                <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regInv"> </td>
-            </tr>
-            <tr>
-                <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regInv"> </td>
-            </tr>
-
+        <table class="regInvestable">
+            <form action="" method="post">
+                <tr>
+                    <td class="info"> Email </td>                <td> <input type="email" class="inputBox-regInv" name = "email"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Forename </td>             <td> <input type="text" class="inputBox-regInv" name = "forename"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Surname </td>              <td> <input type="text" class="inputBox-regInv" name = "surname"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Company/Organization </td> <td> <input type="text" class="inputBox-regInv" name = "company_name"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regInv" name = "phone_number"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regInv" name = "gender"> </td>
+                </tr>
+            </form>
         </table>
         <button class="nextButton">
             <a href="{{url_for('pref')}}">Next</a>
