--- a/static/main.css
+++ b/static/main.css
@@ -414,7 +414,156 @@ a{
   border-radius: 8px;
 }
 
+/*-----------------------------------------register Startup--------------------------------------------------------*/
+a{
+  color: white;
+  text-decoration: none;
+}
+.regStartable{
+  border-collapse: separate;
+  border-spacing: 0 20px;
+}
+.info{
+  text-align: right;
+  font-weight: bold;
+}
+.inputBox-regStart{
+  background-color:rgb(177, 92, 170);
+  color: white;
 
+  width: 250px;
+  height: 30px;
+  margin-left: 20px;
+  border-radius:8px;
+}
+.nextButton{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 400px;
+
+  color: white;
+  text-decoration: none;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+.regStart-wrap{
+  width: 500px;
+  margin-top: 125px;
+  margin-left: auto; 
+  margin-right: auto; 
+}
+/*-------------------------------------preference Startup----------------------------------------------------------*/
+.prefStart-table{
+  border-collapse: separate;
+  border-spacing: 0 20px;
+}
+.info{
+  text-align: right;
+  font-weight: bold;
+}
+.inputBox-prefStart{
+  background-color:rgb(177, 92, 170);
+  color: white;
+
+  width: 250px;
+  height: 30px;
+  margin-left: 20px;
+  border-radius:8px;
+}
+.nextButton{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 400px;
+
+  color: white;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+.prefStart-wrap{
+  width: 520px;
+  margin-top: 125px;
+  margin-left: auto; 
+  margin-right: auto; 
+}
+.backBtn{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 150px; 
+
+  color: white;
+  text-decoration: none;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+
+.startBtn{
+  width: 60px;
+  height: 30px;    
+  position: relative;
+  top: 30px;
+  left: 300px;
+
+  color: white;
+  background-color:rgb(134, 40, 126);
+  border-radius: 8px;
+}
+.container {
+  display: inline;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: right;
+  font-weight: bold;
+  margin-left: 20px;
+}
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+.container input:checked ~ .checkmark {
+  background-color: rgb(177, 92, 170);
+}
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+.container .checkmark:after {
+  top: 9px;
+ left: 9px;
+ width: 8px;
+ height: 8px;
+ border-radius: 50%;
+ background: white;
+}
 /*----------------------------------------Search and Filters-------------------------------------------------------*/
 
 .logo {
