Added Routing to search startup from register

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     </div>
     <div class="bottom">
         <a class="reginvestor" href="{{url_for('regis_investor')}}">Register as an <b>Investor</b></a>
-        <a class="regstartup" href="aaaa">Register as a <b>Startup Founder</b></a>
+        <a class="regstartup" href="{{url_for('regis_startup')}}">Register as a <b>Startup Founder</b></a>
         <div class="separator"></div>
         <div class="endsquare"></div>
     </div>
