--- a/templates/pref_startup.html
+++ b/templates/pref_startup.html
@@ -41,7 +41,7 @@
             <a href="{{url_for('regis_startup')}}">Back</a> 
         </button>
         <button class="startBtn">
-            <a>Start</a>
+            <a href="{{url_for('startups')}}">Start</a>
         </button>
     </div>
 {%endblock layout%}
