--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -31,7 +31,7 @@
             </form>
         </table>
         <button class="nextButton">
-            <a href="{{url_for('pref')}}">Next</a>
+            <a href="{{url_for('pref_investor')}}">Next</a>
         </button> 
     </div>
 {%endblock layout%}
