--- a/templates/pref_investor.html
+++ b/templates/pref_investor.html
@@ -40,7 +40,7 @@
             <a href="{{url_for('regis_investor')}}">Back</a> 
         </button>
         <button class="startBtn">
-            <a>Start</a>
+            <a href="{{url_for('startups')}}">Start</a>
         </button>
     </div>
 {%endblock layout%}
