Resolved bug in the navbar home link Previously the home button (UP) in the navbar sometimes does not link to the home page if user click on a certain page now it will always came back home whenever user clicks

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
   <body>
     <div class="navbar">
       <span class="background"></span>
-      <a class="up" href="home">UP</a>
+      <a class="up" href="{{url_for('home')}}">UP</a>
       <div class="searchbar">
         <span class="background"></span>
         <input type="text" placeholder="Search..." />
