--- a/static/main.css
+++ b/static/main.css
@@ -319,6 +319,7 @@ a{
   text-decoration: none;
 }
 .regInvestable{
+  margin-left: 45px;
   border-collapse: separate;
   border-spacing: 0 20px;
 }
@@ -335,21 +336,10 @@ a{
   margin-left: 20px;
   border-radius:8px;
 }
-.nextButton{
-  width: 60px;
-  height: 30px;    
-  position: relative;
-  top: 30px;
-  left: 400px;
 
-  color: white;
-  text-decoration: none;
-  background-color:rgb(134, 40, 126);
-  border-radius: 8px;
-}
 .regInv-wrap{
   width: 500px;
-  margin-top: 125px;
+  margin-top: 150px;
   margin-left: auto; 
   margin-right: auto; 
 }
@@ -359,10 +349,7 @@ a{
   border-collapse: separate;
   border-spacing: 0 20px;
 }
-.info{
-  text-align: right;
-  font-weight: bold;
-}
+
 .inputBox-prefInv{
   background-color:rgb(177, 92, 170);
   color: white;
@@ -372,42 +359,21 @@ a{
   margin-left: 20px;
   border-radius:8px;
 }
-.nextButton{
-  width: 60px;
-  height: 30px;    
-  position: relative;
-  top: 30px;
-  left: 400px;
 
-  color: white;
-  background-color:rgb(134, 40, 126);
-  border-radius: 8px;
-}
 .prefInv-wrap{
   width: 520px;
-  margin-top: 125px;
+  margin-top: 70px;
+  margin-bottom: 70px;
   margin-left: auto; 
   margin-right: auto; 
 }
-.backBtn{
+
+.submitBtn{
   width: 60px;
   height: 30px;    
   position: relative;
-  top: 30px;
-  left: 150px; 
-
-  color: white;
-  text-decoration: none;
-  background-color:rgb(134, 40, 126);
-  border-radius: 8px;
-}
-
-.startBtn{
-  width: 60px;
-  height: 30px;    
-  position: relative;
-  top: 30px;
-  left: 300px;
+  top: 20px;
+  left: 450px;
 
   color: white;
   background-color:rgb(134, 40, 126);
