--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -30,8 +30,42 @@
                 </tr>
             </form>
         </table>
-        <button class="nextButton">
-            <a href="{{url_for('pref_investor')}}">Next</a>
-        </button> 
+
+    </div>
+
+    <div class="prefInv-wrap">
+        <h1>Tell us what you want</h1>
+        <table class="prefInv-table">
+            <form>
+                <tr>
+                    <td class="info"> Category Preference </td>
+                    <td> <input type="email" class="inputBox-prefInv" name="category_pref"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Investing Budget </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="budget"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Location of Startup </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="location"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Number of People in the Team </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="team_amount"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Development Stage </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="dev_stage"> </td>
+                </tr>
+                <tr>
+                    <td class="info"> Return Type </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="return_type"> </td>
+                </tr>
+            </form>
+        </table>
+
+        <button class="submitBtn">
+            <a href="{{url_for('startups')}}">Submit</a>
+        </button>
     </div>
 {%endblock layout%}
