--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -36,10 +36,10 @@
     <div class="prefInv-wrap">
         <h1>Tell us what you want</h1>
         <table class="prefInv-table">
-            <form>
+            <form action = "" method="post">
                 <tr>
                     <td class="info"> Category Preference </td>
-                    <td> <input type="email" class="inputBox-prefInv" name="category_pref"> </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="category_pref"> </td>
                 </tr>
                 <tr>
                     <td class="info"> Investing Budget </td>
@@ -59,13 +59,12 @@
                 </tr>
                 <tr>
                     <td class="info"> Return Type </td>
-                    <td> <input type="text" class="inputBox-prefInv" name="return_type"> </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="return_type_invest"> </td>
+                </tr>
+                <tr>
+                    <input type="submit" class = "submitBtn">
                 </tr>
             </form>
         </table>
-
-        <button class="submitBtn">
-            <a href="{{url_for('startups')}}">Submit</a>
-        </button>
     </div>
 {%endblock layout%}
