Menambahkan name untuk tiap entri form startup

--- a/templates/regis_startup.html
+++ b/templates/regis_startup.html
@@ -11,28 +11,28 @@
         <table class="regStartable">
             <form action="" method="post">
                 <tr>
-                    <td class="info"> Email </td>                <td> <input type="email" class="inputBox-regStart"> </td>
+                    <td class="info"> Email </td>                <td> <input type="email" class="inputBox-regStart" name="email"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Full Name </td>            <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Full Name </td>            <td> <input type="text" class="inputBox-regStart" name="full_name"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Startup Name </td>         <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Startup Name </td>         <td> <input type="text" class="inputBox-regStart" name="name"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Location </td>             <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Location </td>             <td> <input type="text" class="inputBox-regStart" name="location"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Startup Category </td>     <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Startup Category </td>     <td> <input type="text" class="inputBox-regStart" name="category"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Startup Description </td>  <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Startup Description </td>  <td> <input type="text" class="inputBox-regStart" name="description"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regStart" name="phone_number"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regStart"> </td>
+                    <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regStart" name="gender"> </td>
                 </tr>
             </form>
         </table>
