Menghubungkan register investor dengan database

--- a/templates/regis_investor.html
+++ b/templates/regis_investor.html
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td class="info"> Location of Startup </td>
-                    <td> <input type="text" class="inputBox-prefInv" name="location"> </td>
+                    <td> <input type="text" class="inputBox-prefInv" name="startuplocation"> </td>
                 </tr>
                 <tr>
                     <td class="info"> Number of People in the Team </td>
