--- a/static/main.css
+++ b/static/main.css
@@ -91,30 +91,44 @@
 
 /*----------------------------------------Home-------------------------------------------------------*/
 .homeBG{
-  position: absolute;
-  width: 1440px;
-  height: 682px;
-  left: 0px;
-  top: 0px;
+  width: 100%;
+  height: 67vh;
 }
 
 .homeBG .ungu{
   position: absolute;
-  width: 1440px;
-  height: 682px;
+  width: 100%;
+  height: 67vh;
   left: 0px;
   top: 0px;
   mix-blend-mode: normal;
   opacity: 0.75;
 }
 
-.homeBG h1{
+.homeBG .orgrapat {
   position: absolute;
-  width: 885px;
-  height: 86px;
-  left: 89px;
-  top: 222px;
+  width: 100%;
+  height: 67vh;
+  left: 0px;
+  top: 0px;
+  background: url("./images/BGOrangRapat.png");
+  background-size: cover;
+}
 
+.homeBG .homeBG-container {
+  position: relative;
+  height: 100%;
+  width: 94vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 5vw;
+}
+
+.homeBG h1{
+  font-size: larger;
+  margin: 0;
   font-family: Margaret;
   font-style: normal;
   font-weight: bold;
@@ -125,12 +139,7 @@
 }
 
 .homeBG h2{
-  position: absolute;
-  width: 989px;
-  height: 44px;
-  left: 89px;
-  top: 319px;
-
+  margin: 0;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -141,12 +150,9 @@
 }
 
 .homeBG a{
-  position: absolute;
   width: 233px;
-  height: 66px;
-  left: 89px;
-  top: 395px;
-
+  height: 3em;
+  margin-top: 20px;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -159,12 +165,13 @@
   border-radius: 10px;
 }
 
+
+.underBG {
+  margin: 0 5vw;
+  height: 33vh;
+}
+
 .underBG h2{
-  position: absolute;
-  width: 616px;
-  height: 59px;
-  left: 89px;
-  top: 744px;
 
   font-family: Margaret;
   font-style: normal;
@@ -176,11 +183,6 @@
 }
 
 .underBG h3{
-  position: absolute;
-  width: 1259px;
-  height: 153px;
-  left: 89px;
-  top: 806px;
 
   font-family: Montserrat;
   font-style: normal;
@@ -192,13 +194,11 @@
 }
 
 .rollingbox{
-  position: absolute;
-  width: 1440px;
-  height: 568px;
-  left: 0px;
-  top: 1023px;
+  position: relative;
+  width: 100%;
+  height: 50vh;
 
-background: #760166;
+  background: #760166;
 }
 
 .rollingbox h2{
