--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
         <input type="text" placeholder="Search..." />
       </div>  
       <div class="right">
-        <a class="investors" href="iniDiIsiLinkInvestor">Investors</a>
+        <a class="investors" href="{{url_for('investors')}}">Investors</a>
         <a class="startups" href="{{url_for('startups')}}">Startups</a>
         <a class="login"  href="{{url_for('login')}}">Login</a>
       </div>
