--- a/Website/templates/regis_investor.html
+++ b/Website/templates/regis_investor.html
@@ -28,15 +28,6 @@
                 <tr>
                     <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regInv" name = "gender"> </td>
                 </tr>
-            </form>
-        </table>
-
-    </div>
-
-    <div class="prefInv-wrap">
-        <h1>Tell us what you want</h1>
-        <table class="prefInv-table">
-            <form action = "" method="post">
                 <tr>
                     <td class="info"> Category Preference </td>
                     <td> <input type="text" class="inputBox-prefInv" name="category_pref"> </td>
@@ -62,9 +53,10 @@
                     <td> <input type="text" class="inputBox-prefInv" name="return_type_invest"> </td>
                 </tr>
                 <tr>
-                    <input type="submit" class = "submitBtn">
+                    <td><input type="submit" class = "submitBtn"> </td>
                 </tr>
             </form>
         </table>
     </div>
+
 {%endblock layout%}
