--- a/Website/templates/regis_startup.html
+++ b/Website/templates/regis_startup.html
@@ -34,13 +34,6 @@
                 <tr>
                     <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regStart" name="gender"> </td>
                 </tr>
-            </form>
-        </table>
-    </div>
-    <div class="prefInv-wrap">
-        <h1>Tell us what you want</h1>
-        <table class="prefStart-table">
-            <form action="" method="post">
                 <tr>
                     <td class="info"> Budget/Investment Needed </td>
                     <td> <input type="text" class="inputBox-prefStart" name = "budget_need"> </td>
@@ -57,11 +50,11 @@
                     <td class="info"> Other Type of Supports </td>
                     <td>
                         <label class="container">Yes
-                            <input type="radio" checked="checked" name="radio">
+                            <input type="radio" checked="checked" name="radio" value="yes">
                             <span class="checkmark"></span>
                         </label>
                         <label class="container">No
-                            <input type="radio" checked="checked" name="radio">
+                            <input type="radio" checked="checked" name="radio" value="no">
                             <span class="checkmark"></span>
                         </label>
                     </td>
@@ -70,7 +63,9 @@
                     <td class="info"> Supports Needed </td>
                     <td> <input type="text" class="inputBox-prefStart" name="support"> </td>
                 </tr>
-                <input type="submit" class="submitBtn">
+                <tr>
+                    <td> <input type="submit" class="submitBtn"></td>
+                </tr>
             </form>
         </table>
     </div>
