Menyelesaikan fitur filter di startup

--- a/Website/templates/search_filter_startup.html
+++ b/Website/templates/search_filter_startup.html
@@ -16,8 +16,11 @@
     </div>
     <div class='isi'>
         <div class='list'>
-            <!--
-            <ul>    
+            <ul>  
+                {% for item in data %}
+                    <li><a href="#">{{item.name}}</a></li>
+                {% endfor%}
+                <!--  
                 <li><a href="#">Electronic 1</a></li>
                 <li><a href="#">Food and Drink 1</a></li>
                 <li><a href="#">Game 1</a></li>
@@ -29,9 +32,9 @@
                 <li><a href="#">Food and Drink 3</a></li>
                 <li><a href="#">Clothing 3</a></li>
                 <li><a href="#">Electronic 12</a></li>
-                <li><a href="#">Electronic 3</a></li>
+                <li><a href="#">Electronic 3</a></li>-->
             </ul>
-        -->
+        
         </div>
     </div>
 </body>
