--- a/Website/templates/clothings.html
+++ b/Website/templates/clothings.html
@@ -17,9 +17,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>
-                <li><a href="#">Clothing 1</a></li>
-                <li><a href="#">Clothing 2</a></li>
-                <li><a href="#">Clothing 3</a></li>
+            {% for item in data %}
+                <li><a href="#">{{item.name}}</a></li>
+            {% endfor%}
             </ul>
         </div>
     </div>
