--- a/Website/templates/foodndrinks.html
+++ b/Website/templates/foodndrinks.html
@@ -17,9 +17,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>
-                <li><a href="#">Food and Drink 1</a></li>
-                <li><a href="#">Food and Drink 2</a></li>
-                <li><a href="#">Food and Drink 3</a></li>
+                {% for item in data %}
+                <li><a href="#">{{item.name}}</a></li>
+                {% endfor%}
             </ul>
         </div>
     </div>
