--- a/Website/templates/agriculture.html
+++ b/Website/templates/agriculture.html
@@ -18,8 +18,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>    
-                <li><a href="#">Agriculture 1</a></li>
-                <li><a href="#">Agriculture 2</a></li>
+                {% for item in data %}
+                <li><a href='#'>{{item.company}}</a></li>
+                {%endfor%}
             </ul>
         </div>
     </div>
