--- a/Website/templates/fintech.html
+++ b/Website/templates/fintech.html
@@ -18,9 +18,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>
-                <li><a href="#">FinTech 1</a></li>
-                <li><a href="#">FinTech 2</a></li>
-                <li><a href="#">FinTech 3</a></li>
+                {% for item in data %}
+                <li><a href='#'>{{item.company}}</a></li>
+                {%endfor%}
             </ul>
         </div>
     </div>
