--- a/Website/templates/search_filter_investor.html
+++ b/Website/templates/search_filter_investor.html
@@ -18,18 +18,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>    
-                <li><a href="#">FinTech 1</a></li>
-                <li><a href="#">Education 1</a></li>
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Education 2</a></li>
-                <li><a href="#">Agriculture 2</a></li>
-                <li><a href="#">Service 3</a></li>
-                <li><a href="#">Agriculture 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Technology 1</a></li>
-                <li><a href="#">Technology 2</a></li>
-                <li><a href="#">FinTech 2</a></li>
-                <li><a href="#">FinTech 3</a></li>
+                {% for item in data %}
+                <li><a href='#'>{{item.company}}</a></li>
+                {%endfor%}
             </ul>
         </div>
     </div>
