--- a/Website/templates/service.html
+++ b/Website/templates/service.html
@@ -18,9 +18,9 @@
     <div class='isi'>
         <div class='list'>
             <ul>    
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                {% for item in data %}
+                <li><a href='#'>{{item.company}}</a></li>
+                {%endfor%}
             </ul>
         </div>
     </div>
