--- a/Website/templates/regis_investor.html
+++ b/Website/templates/regis_investor.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td class="info"> Investing Budget </td>
-                    <td> <input type="text" class="inputBox-prefInv" name="budget"> </td>
+                    <td> <input type="number" class="inputBox-prefInv" name="budget"> </td>
                 </tr>
                 <tr>
                     <td class="info"> Location of Startup </td>
@@ -42,7 +42,7 @@
                 </tr>
                 <tr>
                     <td class="info"> Number of People in the Team </td>
-                    <td> <input type="text" class="inputBox-prefInv" name="team_amount"> </td>
+                    <td> <input type="number" class="inputBox-prefInv" name="team_amount"> </td>
                 </tr>
                 <tr>
                     <td class="info"> Development Stage </td>
