--- a/Website/templates/education.html
+++ b/Website/templates/education.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../static/main.css">
 </head>
 <body>
-    <h1 class="logo">Startups</h1>
+    <h1 class="logo">Investors</h1>
     <h2 class="tags">Tags</h2>
 
     <div class="category">
