--- a/Website/templates/regis_startup.html
+++ b/Website/templates/regis_startup.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td class="info"> Budget/Investment Needed </td>
-                    <td> <input type="text" class="inputBox-prefStart" name = "budget_need"> </td>
+                    <td> <input type="number" class="inputBox-prefStart" name = "budget_need"> </td>
                 </tr>
                 <tr>
                     <td class="info"> Company Location </td>
