Added flex-box in home

--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -15,7 +15,29 @@
     </div>
     <div class="rollingbox">
         <h2>Browse trough newly registered startups</h2>
-    </div>
+        <div class="flex-box">
+            <div class="flex-boxBG">
+                <div></div>
+                <h3>Startup Name</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eveniet assumenda sapiente repellendus obcaecati corrupti consequatur.</h4>
+            </div>
+            <div class="flex-boxBG">
+                <div></div>
+                <h3>Startup Name</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eveniet assumenda sapiente repellendus obcaecati corrupti consequatur.</h4>
+            </div>
+            <div class="flex-boxBG">
+                <div></div>
+                <h3>Startup Name</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eveniet assumenda sapiente repellendus obcaecati corrupti consequatur.</h4>
+            </div>
+            <div class="flex-boxBG">
+                <div></div>
+                <h3>Startup Name</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eveniet assumenda sapiente repellendus obcaecati corrupti consequatur.</h4>
+            </div>
+            <div class="flex-boxBG-next">&#x23F5</div>
+        </div>
     <div class="bottom">
         <a class="reginvestor" href="{{url_for('regis_investor')}}">Register as an <b>Investor</b></a>
         <a class="regstartup" href="{{url_for('regis_startup')}}">Register as a <b>Startup Founder</b></a>
