gender dibalikin pake text lagi

--- a/src/Website/templates/regis_startup.html
+++ b/src/Website/templates/regis_startup.html
@@ -34,14 +34,7 @@
                 <tr>
                     <td class="info"> Sex </td>               
                     <td> 
-                        <label class="container">Man
-                            <input type="radio" checked="checked" name="radio" value="man">
-                            <span class="checkmark"></span>
-                        </label>
-                        <label class="container">Woman
-                            <input type="radio" name="radio" value="woman">
-                            <span class="checkmark"></span>
-                        </label>    
+                        <input type="text" class="inputBox-regStart" name="sex">
                     </td>
                 </tr>
                 <tr>
